compiler/tools/fpp-check/test/redef/module_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_type.fpp: 2.1
type T
^
error: redefinition of symbol T
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_type.fpp: 1.1
module T { }
^
